fix contrast and missing labels errors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,8 +155,6 @@ footer {
   border-radius: 4px;
 }
 .login-container button {
-  background-color: #007BFF;
-  color: white;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 4px;
@@ -179,7 +177,7 @@ footer {
   display: flex;
   flex-direction: column;
 }
-.vehicleMgt a, .selectClassification *{
+.vehicleMgt a, .selectClassification * {
   margin: 1rem;
 }
 #classificationList {
@@ -205,8 +203,6 @@ td {
 .submit-btn {
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
-  color: #ffffff;
   border: none;
   border-radius: 5px;
   font-size: 16px;
@@ -263,8 +259,6 @@ textarea {
 }
 
 .change-password button, .account-update button {
-  background-color: #007bff;
-  color: white;
   padding: 10px;
   border: none;
   border-radius: 5px;
